--- a/nextjs_space/.env.example
+++ b/nextjs_space/.env.example
@@ -1,14 +1,33 @@
-DATABASE_URL='postgresql://username:password@localhost:5432/database_name'
-ABACUSAI_API_KEY=your_abacusai_api_key
-STRAVA_CLIENT_ID=your_strava_client_id
-STRAVA_CLIENT_SECRET=your_strava_client_secret
+# Database
+DATABASE_URL='postgresql://user:password@localhost:5432/dbname'
+
+# Abacus AI
+ABACUSAI_API_KEY=your_abacus_key
+
+# Strava OAuth
+STRAVA_CLIENT_ID=your_client_id
+STRAVA_CLIENT_SECRET=your_client_secret
 STRAVA_REDIRECT_URI=https://yourdomain.com/api/strava/callback
-STRAVA_VERIFY_TOKEN=your_strava_verify_token
+STRAVA_VERIFY_TOKEN=your_verify_token
+
+# NextAuth
 NEXTAUTH_SECRET=your_nextauth_secret
 NEXTAUTH_URL=https://yourdomain.com
+
+# Google OAuth
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
-NODE_ENV=production
-OPENAI_API_KEY=your_openai_api_key
+
+# OpenAI
+OPENAI_API_KEY=your_openai_key
 LLM_PROVIDER=openai
 LLM_MODEL=gpt-4o-mini
+
+# Stripe (TEST MODE)
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PUBLISHABLE_KEY=pk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+STRIPE_PRICE_MONTHLY=price_...
+STRIPE_PRICE_ANNUAL=price_...
+
+NODE_ENV=production
