--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -19,14 +19,15 @@
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.24.0",
     "eslint-config-next": "15.3.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
-    "postcss": "8.4.30",
-    "prisma": "6.7.0",
+    "postcss": "^8.4.30",
+    "prisma": "^6.7.0",
     "tailwind-merge": "2.5.2",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "1.0.7",
     "ts-node": "10.9.2",
     "tsx": "4.20.3",
@@ -37,7 +38,7 @@
     "@headlessui/react": "1.7.18",
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "6.7.0",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
@@ -65,12 +66,12 @@
     "@radix-ui/react-toggle": "1.1.0",
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.2",
+    "@stripe/stripe-js": "^8.2.0",
     "@tanstack/react-query": "5.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "9.0.5",
     "@types/plotly.js": "2.35.5",
     "@types/react-plotly.js": "2.6.3",
-    "autoprefixer": "10.4.15",
     "bcryptjs": "^3.0.2",
     "chart.js": "4.4.9",
     "class-variance-authority": "0.7.0",
@@ -111,6 +112,7 @@
     "react-use": "17.6.0",
     "recharts": "2.15.3",
     "sonner": "^2.0.7",
+    "stripe": "^19.2.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
     "vaul": "0.9.9",
