--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "tsx --require dotenv/config scripts/seed.ts"
@@ -24,11 +25,12 @@
     "eslint-config-next": "15.3.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
-    "postcss": "^8.4.30",
+    "postcss": "^8.5.6",
     "prisma": "^6.7.0",
-    "tailwind-merge": "2.5.2",
-    "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "1.0.7",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "10.9.2",
     "tsx": "4.20.3",
     "typescript": "5.2.2"
@@ -75,7 +77,7 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "4.4.9",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
+    "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "cookie": "1.0.2",
     "csv": "6.3.11",
@@ -114,7 +116,6 @@
     "sonner": "^2.0.7",
     "stripe": "^19.2.0",
     "swr": "2.2.4",
-    "tailwind-scrollbar-hide": "1.1.7",
     "vaul": "0.9.9",
     "webpack": "5.99.5",
     "yup": "1.3.0",
