--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "cd nextjs_space && npm install --legacy-peer-deps && npm run build",
+  "buildCommand": "cd nextjs_space && npm install && npm run build",
   "outputDirectory": "nextjs_space/.next",
   "framework": "nextjs",
-  "installCommand": "cd nextjs_space && npm install --legacy-peer-deps",
+  "installCommand": "cd nextjs_space && npm install",
   "env": {
     "NODE_ENV": "production"
   }
