--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -27,7 +27,7 @@
     "postcss": "^8.5.6",
     "prisma": "^6.7.0",
     "tailwind-merge": "^2.6.0",
-    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwind-scrollbar-hide": "^1.3.1",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "10.9.2",
@@ -40,6 +40,12 @@
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "^6.18.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
