--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "version": 2,
   "buildCommand": "cd nextjs_space && npm install --force && npm run build",
-  "outputDirectory": "nextjs_space/.next",
+  "outputDirectory": "nextjs_space",
   "framework": "nextjs",
-  "installCommand": "cd nextjs_space && npm install --force",
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "installCommand": "cd nextjs_space && npm install --force"
 }
