fix: correct Vercel output directory configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "buildCommand": "cd nextjs_space && npm install --force && npm run build",
-  "outputDirectory": "nextjs_space",
+  "outputDirectory": "nextjs_space/.next",
   "framework": "nextjs",
   "installCommand": "cd nextjs_space && npm install --force"
 }
