--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -11,4 +11,4 @@ GOOGLE_CLIENT_SECRET=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
 NODE_ENV=production
 OPENAI_API_KEY=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
 LLM_PROVIDER=openai
-LLM_MODEL=gpt-4o-mini
+LLM_MODEL=gpt-4o
