--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -12,3 +12,10 @@ NODE_ENV=production
 OPENAI_API_KEY=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
 LLM_PROVIDER=openai
 LLM_MODEL=gpt-4o
+
+# Stripe (TEST MODE)
+STRIPE_SECRET_KEY=sk_test_placeholder
+STRIPE_PUBLISHABLE_KEY=pk_test_placeholder
+STRIPE_WEBHOOK_SECRET=whsec_placeholder
+STRIPE_PRICE_MONTHLY=price_placeholder
+STRIPE_PRICE_ANNUAL=price_placeholder
