--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -90,6 +90,7 @@
     "mapbox-gl": "1.13.3",
     "next": "14.2.28",
     "next-auth": "4.24.11",
+    "next-intl": "^4.4.0",
     "next-themes": "0.3.0",
     "plotly.js": "2.35.3",
     "postcss": "^8.5.6",
