--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -26,7 +26,7 @@
     "prisma": "^6.7.0",
     "ts-node": "10.9.2",
     "tsx": "4.20.3",
-    "typescript": "5.2.2"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@floating-ui/react": "0.26.0",
