--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -26,7 +26,7 @@
     "prisma": "^6.7.0",
     "ts-node": "10.9.2",
     "tsx": "4.20.3",
-    "typescript": "^5.9.3"
+    "typescript": "5.9.3"
   },
   "dependencies": {
     "@floating-ui/react": "0.26.0",
@@ -48,7 +48,7 @@
     "@radix-ui/react-menubar": "1.1.1",
     "@radix-ui/react-navigation-menu": "1.2.0",
     "@radix-ui/react-popover": "1.1.1",
-    "@radix-ui/react-progress": "1.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "1.2.0",
     "@radix-ui/react-scroll-area": "1.1.0",
     "@radix-ui/react-select": "2.1.1",
