--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd nextjs_space && npm install --force && npm run build",
+  "buildCommand": "cd nextjs_space && npm install --force && npx prisma generate && npx prisma migrate deploy && npm run build",
   "framework": "nextjs",
   "installCommand": "cd nextjs_space && npm install --force"
 }
