fix(i18n): corrige formatação de datas e interpolação de traduções
FASE 1 & 2 - Correções Críticas e Moderadas:

✅ PRISMA BUILD FIX:
- Remove diretório aninhado nextjs_space/nextjs_space/
- Atualiza vercel.json com schema path explícito
- Melhora .vercelignore para evitar conflitos

✅ DATE FORMATTING FIX:
- Cria utility lib/utils/date-formatter.ts
- Implementa formatLocalizedDate() para datas completas
- Implementa formatShortDate() para datas curtas
- Aplica em dashboard e plano pages
- Resolve problema: 'Tuesday, 4 de November' → 'terça-feira, 4 de novembro'

✅ TRANSLATION INTERPOLATION FIX:
- Atualiza useTranslations hook para suportar {{key}} e {key}
- Corrige substituição de variáveis nas traduções
- Resolve problema: '{Maurillio}' → 'Maurillio' (real)

Arquivos modificados:
- vercel.json (build command + schema path)
- .vercelignore (ignora duplicados)
- lib/i18n/hooks.ts (interpolation fix)
- lib/utils/date-formatter.ts (NEW - date utilities)
- app/[locale]/dashboard/page.tsx (usa date-formatter)
- app/[locale]/plano/page.tsx (usa date-formatter)
- PLANO_CORRECAO_COMPLETA_05NOV2025.md (NEW - plano de ação)

Próximo: FASE 3 - Locale Routing Fix (tracking 404)

--- a/.vercelignore
+++ b/.vercelignore
@@ -3,3 +3,12 @@
 .env.*
 !nextjs_space/.env
 !nextjs_space/.env.example
+
+# Ignore nested duplicates
+nextjs_space/nextjs_space/
+
+# Ignore docs and scripts
+*.md
+!README.md
+scripts/
+docs/
