fix(build): corrigir configuração Vercel e adicionar diagnósticos
- Adicionar schema path explícito no vercel.json
- Atualizar .vercelignore para ignorar apenas docs necessários
- Adicionar prisma.schema no package.json
- Criar diagnósticos completos de problemas
- Documentar análise detalhada de tradução

Fixes:
- Build Vercel quebrado por conflito de env vars
- Prisma schema não encontrado durante build
- Preparação para fix de interpolação e traduções

Related: #interpolation #build #i18n

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,14 +1,26 @@
 # Ignore .env files in root (Prisma should only use nextjs_space/.env)
 .env
 .env.*
-!nextjs_space/.env
-!nextjs_space/.env.example
 
 # Ignore nested duplicates
 nextjs_space/nextjs_space/
 
-# Ignore docs and scripts
-*.md
-!README.md
+# Ignore docs and scripts (but keep README)
+AUDITORIA_*.md
+DIAGNOSTICO_*.md
+EXECUCAO_*.md
+PLANO_*.md
+RELATORIO_*.md
+RESPOSTA_*.md
+RESUMO_*.md
+SESSAO_*.md
+CONTEXTO.md
+DOCUMENTACAO.md
+GUIA_*.md
+ROADMAP.md
+STRAVA_*.md
 scripts/
 docs/
+create_*.py
+fix-*.js
+test_*.sh
