--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "cd nextjs_space && npm install --force && npx prisma generate --schema=./prisma/schema.prisma && npx prisma migrate deploy --schema=./prisma/schema.prisma && npm run build",
+  "buildCommand": "cd nextjs_space && npm install --force && npx prisma generate && npx prisma migrate deploy && npm run build",
   "framework": "nextjs",
-  "installCommand": "cd nextjs_space && npm install --force"
+  "installCommand": "cd nextjs_space && npm install --force",
+  "env": {
+    "PRISMA_SCHEMA_PATH": "./prisma/schema.prisma"
+  }
 }
