--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "cd nextjs_space && npm install --force && npx prisma generate && npx prisma migrate deploy && npm run build",
+  "buildCommand": "npm install --force && npx prisma generate && npx prisma migrate deploy && npm run build",
   "framework": "nextjs",
-  "installCommand": "cd nextjs_space && npm install --force",
-  "env": {
-    "PRISMA_SCHEMA_PATH": "./prisma/schema.prisma"
-  }
+  "installCommand": "npm install --force",
+  "rootDirectory": "nextjs_space"
 }
