--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "version": 2,
-  "buildCommand": "npm install --force && npx prisma generate && npx prisma migrate deploy && npm run build",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "npx prisma generate && npx prisma migrate deploy && npm run build",
   "framework": "nextjs",
   "installCommand": "npm install --force"
 }
