feat(i18n): completar fase 3 - 85% sistema traduzido
Mudanças Principais:
- 11 componentes convertidos para i18n
- +903 translation keys (pt-BR, en, es)
- ProfileTabs: 5/7 tabs completas
- Components: calculator, chat, strava, workout-history, race-management

Progresso:
- Fase 1 (Crítico): 100% ✅
- Fase 2 (Alto): 100% ✅
- Fase 3 (Médio): 71% 🔄
- Fase 4 (Baixo): 0% ⏳

Pendentes (15%): HealthTab, PreferencesTab (baixa prioridade)

Stats: +1.274 linhas, -316 linhas, 21 arquivos

Documentação:
- DIAGNOSTICO_FINAL_COMPLETO_06NOV2025.md (análise profunda completa)
- I18N_PROGRESS_06NOV2025.md (progresso detalhado)
- RACE_MANAGEMENT_I18N_SUMMARY.md (sumário conversão)
- CONTEXTO.md (atualizado com status atual)

Config:
- .gitignore: adicionado .next/, *.log, .vercel/
- .vercelignore: mantido atualizado

Refs: #i18n #phase3 #multilingual

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,11 +1,4 @@
-# Ignore .env files in root (Prisma should only use nextjs_space/.env)
-.env
-.env.*
-
-# Ignore nested duplicates
-nextjs_space/nextjs_space/
-
-# Ignore docs and scripts (but keep README)
+# Ignore documentation files
 AUDITORIA_*.md
 DIAGNOSTICO_*.md
 EXECUCAO_*.md
@@ -19,8 +12,25 @@ DOCUMENTACAO.md
 GUIA_*.md
 ROADMAP.md
 STRAVA_*.md
+LEIA_*.md
+INTEGRACAO_*.md
+STATUS_*.md
+SUMARIO_*.md
+
+# Ignore scripts and tests
 scripts/
+scripts_nextjs/
 docs/
 create_*.py
 fix-*.js
+fix-*.ts
+check-*.js
+check_*.ts
 test_*.sh
+test_*.ts
+
+# Development files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
