--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,63 @@
 
-# Environment variables (root level - should not exist)
+# Environment variables - NUNCA COMMITAR ESTES ARQUIVOS
 /.env
 /.env.local
 /.env.*.local
-node_modules/
+/.env.development.local
+/.env.test.local
+/.env.production.local
+.env
+.env.local
+.env.*.local
+.vercel/.env.*.local
+
+# Credenciais e segredos
+**/secrets.json
+**/*credentials*.json
+**/*.pem
+**/*.key
+**/*-key.json
+
+# Database URLs e configurações sensíveis
+.env*
+!.env.example
+!.env.template
+
+# Vercel
 .vercel
+.vercel/*
+*.vercel
+
+# Build e cache
+node_modules/
 .next/
+.next/*
 *.log
-.vercel/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+lerna-debug.log*
+
+# Testing
+.coverage/
+*.coverage
+coverage/
+.nyc_output/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+.tmp/
+.temp/
