--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@tanstack/react-query": "5.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "9.0.5",
+    "@types/lodash": "^4.17.20",
     "@types/plotly.js": "2.35.5",
     "@types/react-plotly.js": "2.6.3",
     "autoprefixer": "^10.4.21",
@@ -86,7 +87,7 @@
     "input-otp": "1.2.4",
     "jotai": "2.6.0",
     "jsonwebtoken": "9.0.2",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.21",
     "lucide-react": "0.446.0",
     "mapbox-gl": "1.13.3",
     "next": "14.2.28",
