--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
     "prisma": "^6.7.0",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "tsx": "4.20.3",
     "typescript": "^5.9.3"
   },
