chore: adicionar validação automática de campos Strava no build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "bash scripts/check-strava-token-fields.sh && npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
