fix: ajustar cron jobs para Hobby plan do Vercel
Mudança: daily-matches de */6 horas para 1x ao dia (3AM)
Motivo: Vercel Hobby permite apenas cron jobs diários

Crons atualizados:
- daily-matches: 0 3 * * * (3AM diário)
- train-models: 0 0 * * * (midnight diário)
- adjust-thresholds: 0 6 * * * (6AM diário)
- cleanup: 0 2 * * 0 (2AM domingos)

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "crons": [
     {
       "path": "/api/athera-flex/cron/daily-matches",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 3 * * *"
     },
     {
       "path": "/api/athera-flex/cron/train-models",
