fix: remover cron jobs do vercel.json (Hobby plan limit)
Plano Hobby permite apenas 2 cron jobs, mas tínhamos 4.
Removendo crons para permitir deploy.

Crons podem ser re-adicionados via dashboard ou após upgrade.

ref: vercel.com/pricing

--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,5 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
   "framework": "nextjs",
-  "installCommand": "npm install --force",
-  "crons": [
-    {
-      "path": "/api/athera-flex/cron/daily-matches",
-      "schedule": "0 3 * * *"
-    },
-    {
-      "path": "/api/athera-flex/cron/train-models",
-      "schedule": "0 0 * * *"
-    },
-    {
-      "path": "/api/athera-flex/cron/adjust-thresholds",
-      "schedule": "0 6 * * *"
-    },
-    {
-      "path": "/api/athera-flex/cron/cleanup",
-      "schedule": "0 2 * * 0"
-    }
-  ]
+  "installCommand": "npm install --force"
 }
