--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "next": "14.2.28",
     "next-auth": "4.24.11",
     "next-themes": "0.3.0",
+    "openai": "^6.9.1",
     "plotly.js": "2.35.3",
     "postcss": "^8.5.6",
     "react": "18.2.0",
