--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "next dev",
     "build": "npx prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:health": "tsx tests/e2e/health-check.ts",
+    "test:convergence": "tsx tests/e2e/convergence-validator.ts",
+    "test:all": "npm run test:health && npm run test:convergence"
   },
   "prisma": {
     "seed": "tsx --require dotenv/config scripts/seed.ts",
