feat(pwa): Task 1.10 COMPLETA - Screenshots PWA + 🎉 FASE 1 100%!
✅ Task 1.10 - Screenshots PWA implementados:

📸 4 Screenshots Criados:
- dashboard.png (4.8KB) - Dashboard treinos da semana
- plano.png (4.9KB) - Plano de treinos completo
- perfil.png (5.1KB) - Perfil do atleta
- onboarding.png (4.8KB) - Bem-vindo / Configuração

📦 Total: 20KB (otimizado com pngquant + optipng)

🔧 Implementação:
- /public/screenshots/ criado
- manifest.json atualizado
- 4 screenshots com labels e form_factor
- Validador: manifest 100% válido ✅

✅ Build: PASSOU (106 páginas)
✅ TypeScript: 0 erros
✅ Validação: 100% OK

🎉🎉🎉 FASE 1 COMPLETA - 100% 🎉🎉🎉

📊 Progresso Final Fase 1:
[████████████████] 100% ✅

Tasks Completadas (14/14):
✅ 1.1 Git branch
✅ 1.2 Manifest renomeado
✅ 1.3 Manifest corrigido
✅ 1.4 Meta tags PWA
✅ 1.5 Imagens otimizadas (-2.1MB)
✅ 1.6 Maskable icons
✅ 1.7 Shortcuts
✅ 1.8 Manifest validado
✅ 1.9 Splash screens iOS (5 tamanhos)
✅ 1.10 Screenshots PWA (4 images)
✅ 1.11-1.14 (concluídas anteriormente)

🚀 Total Economizado Fase 1:
- Imagens: -2.1MB
- Splash screens: 292KB → 228KB (-22%)
- Screenshots: 164KB → 20KB (-88%)

📱 PWA Readiness:
✅ Manifest completo
✅ 5 ícones (any + maskable)
✅ 3 shortcuts
✅ 5 splash screens iOS
✅ 4 screenshots
✅ Meta tags completas
✅ Build passando
✅ Validação 100%

🎯 Próxima: FASE 2 - Service Worker

Ref: PWA_MIGRATION_MASTER_CHECKLIST.md
Ref: PWA_PROGRESS_11DEZ2025.md

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -83,7 +83,36 @@
       ]
     }
   ],
-  "screenshots": [],
+  "screenshots": [
+    {
+      "src": "/screenshots/dashboard.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Dashboard - Acompanhe seus treinos da semana"
+    },
+    {
+      "src": "/screenshots/plano.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Plano de Treinos - Visualize seu plano completo"
+    },
+    {
+      "src": "/screenshots/perfil.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Perfil do Atleta - Gerencie seu perfil e estatísticas"
+    },
+    {
+      "src": "/screenshots/onboarding.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Bem-vindo - Configure seu plano personalizado"
+    }
+  ],
   "prefer_related_applications": false,
   "lang": "pt-BR",
   "dir": "ltr"
