--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "formik": "2.4.5",
     "framer-motion": "10.18.0",
     "gray-matter": "4.0.3",
+    "idb": "^8.0.3",
     "input-otp": "1.2.4",
     "jotai": "2.6.0",
     "jsonwebtoken": "9.0.2",
